--- a/src/css/backEnd/backEndGlobal.css
+++ b/src/css/backEnd/backEndGlobal.css
@@ -19,8 +19,8 @@ body {
 
 .container {
     width: 800px;
-    margin: 100px auto;
-    padding: 20px;
+    margin: 30px auto;
+    padding: 10px;
     color: #383838;
     background-color: #fff;
     box-shadow: 0px 1px 0px #fff;
@@ -28,13 +28,21 @@ body {
     -border-radius: 5px;
     padding: 30px 46px;
     -webkit-box-shadow: 0px 1px 0px #fff;
-    -mozbox-shadow: 0px 1px 0px #fff;
     -webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
+}
+
+.shieldType {
+    font-size: 20px;
+    margin-bottom: 10px;
+}
+
+[class^=col-md] {
+    padding: 10px;
+    border:1px solid #ddd;
 }
 
 .DNWSYA-btn-icon {
     position: absolute;
     color: black;
-    top: -8px;
+    top: 1px;
 }
