前台垃圾回收站回收区域样式改大了一些，便于拖放

--- a/src/css/frontEnd/common.css
+++ b/src/css/frontEnd/common.css
@@ -17,6 +17,11 @@ html {
   box-sizing: content-box;
 }
 
+.onNormal {
+  padding: 6px 12px 20px;
+  margin-bottom: 5px;
+}
+
 .onDragOver {
   border: 2px dashed #000;
   background-color: #F55;
