--- a/src/css/backEnd/backEndGlobal.css
+++ b/src/css/backEnd/backEndGlobal.css
@@ -1,8 +1,3 @@
-select, input[type=text] {
-    width : 180px;
-    height: 32px;
-}
-
 input[type=checkbox] {
     /* Double-sized Checkboxes */
     -webkit-transform: scale(1.2); /* Safari and Chrome */
@@ -18,32 +13,42 @@ body {
 }
 
 .container {
-    width: 800px;
-    margin: 30px auto;
-    padding: 10px;
-    color: #383838;
-    background-color: #fff;
-    box-shadow: 0px 1px 0px #fff;
-    border: 1px solid #cacaca;
-    -border-radius: 5px;
-    padding: 30px 46px;
-    -webkit-box-shadow: 0px 1px 0px #fff;
-    -webkit-border-radius: 5px;
+  position: relative;
+  width: 800px;
+  margin: 30px auto;
+  padding: 10px;
+  color: #383838;
+  background-color: #fff;
+  box-shadow: 0px 1px 0px #fff;
+  border: 1px solid #cacaca;
+  -border-radius: 5px;
+  padding: 30px 46px;
+  -webkit-box-shadow: 0px 1px 0px #fff;
+  -webkit-border-radius: 5px;
 }
 
 .shieldType {
-    font-size: 20px;
-    margin-bottom: 10px;
+  margin-bottom: 10px;
+}
+
+.shieldType span {
+  font-size: 20px;
+}
+
+.shieldType input {
+  margin: 0px;
+  margin-left: 5px;
+  width: 220px;
 }
 
 [class^=col-md] {
-    font-size: 21px;
-    padding: 2px;
-    border:1px solid #ddd;
+  font-size: 21px;
+  padding: 2px;
+  border:1px solid #ddd;
 }
 
 .DNWSYA-btn-icon {
-    position: absolute;
-    color: #364049;
-    top: -5px;
+  position: absolute;
+  color: #364049;
+  top: -5px;
 }
